--- a/client/src/assets/css/home.css
+++ b/client/src/assets/css/home.css
@@ -1,6 +1,6 @@
 /* FindRegistered_wraper */
 
-.FindRegistered_wraper{background: url('../images/Home/banner.png');background-size: cover;background-position: center;min-height: 700px;width: 100%;display: flex;align-items: center;justify-content: center;flex-direction: column;padding-top: 50px;padding-bottom: 50px;}
+.FindRegistered_wraper{background: url('../images/Home/banner.webp');background-size: cover;background-position: center;min-height: 700px;width: 100%;display: flex;align-items: center;justify-content: center;flex-direction: column;padding-top: 50px;padding-bottom: 50px;}
 .FindRegistered_wraper h1 { 
     max-width: initial;
     font-family: 'Noiche';
