--- a/client/src/components/TermsAndCondition/TermsAndCondition.css
+++ b/client/src/components/TermsAndCondition/TermsAndCondition.css
@@ -27,13 +27,12 @@
   justify-content: center;
 }
 .lorem_para p {
-  max-width: 1576px;
   font-family: "Noiche";
-  font-weight: 600;
-  font-size: 29px;
-  line-height: 32px;
-  text-align: left;
-  color: #444;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 33px;
+  color: #000000ad;
+  text-align: justify;
 }
 .lorem_wrapper ul.m-con{
   padding-top: 10px;
@@ -69,19 +68,22 @@
 }
 .lorem_wrapper p {
   font-family: "Noiche";
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 32px;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 33px;
   text-align: left;
-  color: #000;
+  color: #000000ad;
+  text-align: justify;
 }
+ 
 .lorem_wrapper li {
   font-family: "Noiche";
-  font-weight: 600;
-  font-size: 32px;
-  line-height: 32px;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 33px;
   text-align: left;
-  color:#000000;
+  color: #000000ad;
+  text-align: justify;
   list-style: none;
   position: relative;
   margin-bottom: 27px;
@@ -106,14 +108,14 @@
   left: -37px;
   top: 4px;
 }
-p.elits {
+p.elits { 
   font-family: "Noiche";
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 32px;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 33px;
   text-align: left;
-  color: #000;
-  padding-left:0 ;
+  color: #000000ad;
+  text-align: justify;
 }
 .lorem_wrapper {
   box-shadow: 0px 3px 12px rgb(0 0 0 / 16%);
@@ -270,9 +272,12 @@ ol.list_order li {
     padding: 0 25px;
   }
   .privacy_header h1 {
-    font-size: 41px;
+    font-size: 35px;
     text-align: center;
   }
+  .lorem_wrapper ul.m-con { 
+    padding-left: 19px;
+}
 .privacy_header p {
   font-size: 21px;
   line-height: 27px;
@@ -296,6 +301,7 @@ p.custom_padding {
 .privacy_policy p {
   font-size: 21px;
   line-height: 27px;
+  text-align: left;
 }
 .privacy_header p{
   margin: 0;
@@ -305,6 +311,7 @@ p.custom_padding {
   margin-left: 25px;
   margin-right: 25px;
 }
+
 .lorem_wrapper {
   padding: 26px 18px;
 }
