--- a/client/src/components/TermsAndCondition/TermsAndCondition.css
+++ b/client/src/components/TermsAndCondition/TermsAndCondition.css
@@ -108,6 +108,7 @@
 }
 .lorem_wrapper ul.site-links li a:hover{
   text-decoration: underline;
+  color: #444;
 }
 .lorem_wrapper ul{
   padding-left: 0;
