--- a/client/src/components/Privacy_policy/Privacy.css
+++ b/client/src/components/Privacy_policy/Privacy.css
@@ -36,7 +36,7 @@ p{
   font-size: 32px;
   line-height: 32px;
   text-align: left;
-  color: #000000;
+  color: #000000ad;
 }
 .lorem_wrapper span {
   font-family: "Noiche";
@@ -74,7 +74,7 @@ p{
   font-size: 32px;
   line-height: 32px;
   text-align: left;
-  color:#000000;
+  color:#000000ad;
   list-style: none;
   position: relative;
   margin-bottom: 20px;
@@ -104,7 +104,7 @@ p.elit {
   font-size: 32px;
   line-height: 32px;
   display: block;
-  color: #000;
+  color: #000000ad;
   padding-left: 25px;
 }
 p.elit span{
@@ -123,7 +123,7 @@ p.elitss {
   font-size: 29px;
   line-height: 32px;
   display: block;
-  color: #000000;
+  color: #000000ad;
   padding-left: 25px;
 }
 table {
