--- a/client/src/components/TermsAndCondition/TermsAndCondition.css
+++ b/client/src/components/TermsAndCondition/TermsAndCondition.css
@@ -96,7 +96,7 @@
   font-size: 30px;
   line-height: 33px;
   text-align: left;
-  color: #000000ad;
+  color: #444;
   text-align: justify;
   list-style: none;
   position: relative;
