--- a/client/src/components/Privacy_policy/Privacy.css
+++ b/client/src/components/Privacy_policy/Privacy.css
@@ -197,7 +197,7 @@ p.sit_amet {
   padding-left: 0;
 }
 .lorens_padding {
-  padding: 65px 0;
+  padding: 65px 0 30px;
   margin-bottom: 0;
 }
 .lorens_padding p{
@@ -258,7 +258,7 @@ ol.list_order li {
 }
 p.custom_padding a {
   font-size: 26px;
-  
+
 }
   .privacy_header h1 {
     font-size: 74px;
